--- a/versio1/style.css
+++ b/versio1/style.css
@@ -1,5 +1,16 @@
+body {
+    margin: 0 auto;
+    padding: 0 auto;
+    width: 60%
+}
+
 h1 {
     text-decoration: underline;
+}
+
+form {
+    background-color: #ccc;
+    padding: 5px 0 10px 20px;
 }
 
 p {
