--- a/versio2/style.css
+++ b/versio2/style.css
@@ -1,9 +1,25 @@
+body {
+    margin: 0 auto;
+    padding: 0 auto;
+    width: 70%
+}
+
+
 h1 {
     text-decoration: underline;
 }
 
+form {
+    background-color: #ccc;
+    padding: 5px 0 10px 20px;
+}
+
 p {
     margin: 0;
+}
+
+.addButton, .deleteButton, .sortButton {
+    margin-top: 3px;
 }
 
 ul {
